--- a/src/pages/landing/components/product-section/components/product/index.css
+++ b/src/pages/landing/components/product-section/components/product/index.css
@@ -42,7 +42,7 @@
     text-align: left;
     margin: 10px;
     cursor: pointer;
-    position: relative;
+    z-index: 0;
 }
 
 .ProductCard::before {
