--- a/src/pages/landing/index.css
+++ b/src/pages/landing/index.css
@@ -1,4 +1,3 @@
-
 .PurpleRectangle {
     height: 4em;
     width: 100%;
@@ -6,7 +5,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
     font-size: 2em;
     color: white;
 }
